--- a/www/index.html
+++ b/www/index.html
@@ -13,9 +13,6 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-
-    
-
   </head>
 
   <body ng-app="mobile">
@@ -31,7 +28,7 @@
           <ion-content scroll="false" class="padding dashboard" id="login">
 
             <div class="login-text">
-              <h1>FitRPG</h1>
+              <h1>FitRPG-Enhanced</h1>
               <p>Get more out of your healthy lifestyle</p>
             </div>
 
@@ -47,12 +44,14 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <!-- local storage module for sessions-->
-    <script src="lib/angular-local-storage/angular-local-storage.min.js"></script>
+    <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
     <!-- resource module for restful services -->
     <script src="lib/angular-resource/angular-resource.min.js"></script>
     <!-- angular timer for when quests end -->
-    <script src="lib/angular-timer/app/js/timer.js"></script>
-    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/moment/min/moment.min.js"></script>
+    <script src="lib/humanize-duration/humanize-duration.js"></script>
+    <script src="lib/angular-timer/dist/angular-timer.min.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
