--- a/www/app/friends/friends.html
+++ b/www/app/friends/friends.html
@@ -7,6 +7,10 @@
   </ion-nav-buttons>
 
   <ion-content class="has-header">
+    <ion-refresher
+      pulling-text="Pull to refresh..."
+      on-refresh="refresh()" >
+    </ion-refresher>
   <!--SEARCH BAR-->
 <!--
     <div class="list list-inset">
@@ -16,7 +20,7 @@
       </label>
     </div>
  -->
-    <ion-list>
+    <ion-list can-swipe="true">
 
       <div class="item item-divider" ng-click="toggleList('friend')">
         Friends<i class="icon ion-chevron-down pull-right" ng-show="showList['friend']"></i><i class="icon ion-chevron-right pull-right" ng-hide="showList['friend']"></i>
