--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -1,9 +1,9 @@
-<ion-view title="" hide-back-button="true">
+<ion-view title="" hide-back-button="true" ng-init="refresh()">
 
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon-gray icon ion-navicon"></button>
   </ion-nav-buttons>
-  <ion-nav-buttons side="right">
+  <!--<ion-nav-buttons side="right">
     <button class="button button-icon" ng-click="displayAlerts()" ng-show="alertCount"><span class="badge badge-assertive">{{alertCount}}</span></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right">
@@ -11,8 +11,11 @@
   </ion-nav-buttons>
   <ion-nav-buttons side="right">
     <button class="button button-icon icon-gray icon ion-map" ng-click="navTo('quest')"></button>
-  </ion-nav-buttons>
+  </ion-nav-buttons>-->
   <ion-nav-buttons side="right">
+    <button class="button button-icon" ng-click="displayAlerts()" ng-show="alertCount"><span class="badge badge-assertive">{{alertCount}}</span></button>
+    <button class="button button-icon icon-gray icon ion-star" ng-click="rateApp()"></button>
+    <button class="button button-icon icon-gray icon ion-map" ng-click="navTo('quest')"></button>
     <button class="button button-icon icon-gray icon icon-fight" ng-click="navTo('battle')"></button>
   </ion-nav-buttons>
 
