--- a/www/app/quest/quest.html
+++ b/www/app/quest/quest.html
@@ -13,7 +13,10 @@
 
 
   <ion-content class="has-header has-subheader">
-
+    <ion-refresher
+      pulling-text="Pull to refresh..."
+      on-refresh="refresh()" >
+    </ion-refresher>
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" ng-click="navTo('quest')" close="closeAlert($index)">{{alert.msg}}</alert>
 
     <div class="list">
