--- a/www/app/shop/shop.html
+++ b/www/app/shop/shop.html
@@ -12,7 +12,10 @@
 
 
   <ion-content class="has-header has-subheader">
-
+    <ion-refresher
+      pulling-text="Pull to refresh..."
+      on-refresh="refresh()" >
+    </ion-refresher>
     <div class="list" ng-show="isEquipment">
       <div class="item item-divider" ng-click="toggleList('weapons')">
         Weapons<i class="icon ion-chevron-down pull-right" ng-show="showList['weapons']"></i><i class="icon ion-chevron-right pull-right" ng-hide="showList['weapons']"></i>
