--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -3,15 +3,7 @@
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon-gray icon ion-navicon"></button>
   </ion-nav-buttons>
-  <!--<ion-nav-buttons side="right">
-    <button class="button button-icon" ng-click="displayAlerts()" ng-show="alertCount"><span class="badge badge-assertive">{{alertCount}}</span></button>
-  </ion-nav-buttons>
-  <ion-nav-buttons side="right">
-    <button class="button button-icon icon-gray icon ion-star" ng-click="rateApp()"></button>
-  </ion-nav-buttons>
-  <ion-nav-buttons side="right">
-    <button class="button button-icon icon-gray icon ion-map" ng-click="navTo('quest')"></button>
-  </ion-nav-buttons>-->
+
   <ion-nav-buttons side="right">
     <button class="button button-icon" ng-click="displayAlerts()" ng-show="alertCount"><span class="badge badge-assertive">{{alertCount}}</span></button>
     <button class="button button-icon icon-gray icon ion-star" ng-click="rateApp()"></button>
@@ -69,46 +61,27 @@
 
         <div class="item row main-attributes">
           <div class="col" ng-click="applyAttributes('strength')">
-            <i class="icon ion-plus-circled" ng-show="hasSkillPoints()"></i>
+            <i class="icon ion-plus-circled" ng-show="user.attributes.skillPts > 0"></i>
             <h1>{{calculatedData.strength}}</h1>
             <p>Strength</p>
           </div>
           <div class="col" ng-click="applyAttributes('vitality')">
-            <i class="icon ion-plus-circled" ng-show="hasSkillPoints()"></i>
+            <i class="icon ion-plus-circled" ng-show="user.attributes.skillPts > 0"></i>
             <h1>{{calculatedData.vitality}}</h1>
             <p>Vitality</p>
           </div>
           <div class="col" ng-click="applyAttributes('endurance')">
-            <i class="icon ion-plus-circled" ng-show="hasSkillPoints()"></i>
+            <i class="icon ion-plus-circled" ng-show="user.attributes.skillPts > 0"></i>
             <h1>{{calculatedData.endurance}}</h1>
             <p>Endurance</p>
           </div>
           <div class="col" ng-click="applyAttributes('dexterity')">
-            <i class="icon ion-plus-circled" ng-show="hasSkillPoints()"></i>
+            <i class="icon ion-plus-circled" ng-show="user.attributes.skillPts > 0"></i>
             <h1>{{calculatedData.dexterity}}</h1>
             <p>Dexterity</p>
           </div>
         </div>
-<!--
-        <div class="item row main-attributes">
-          <div class="col">
-            <h1>{{user.fitbit.strength}}</h1>
-            <p>Strength</p>
-          </div>
-          <div class="col">
-            <h1>{{user.fitbit.vitality}}</h1>
-            <p>Vitality</p>
-          </div>
-          <div class="col">
-            <h1>{{user.fitbit.endurance}}</h1>
-            <p>Endurance</p>
-          </div>
-          <div class="col">
-            <h1>{{user.fitbit.dexterity}}</h1>
-            <p>Dexterity</p>
-          </div>
-        </div>
- -->
+
       </div>
 
       <div class="card">
