--- a/www/app/shop/shop.html
+++ b/www/app/shop/shop.html
@@ -1,4 +1,4 @@
-<ion-view title="Store" hide-back-button="true">
+<ion-view title="Shop" hide-back-button="true">
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon-gray icon ion-navicon"></button>
   </ion-nav-buttons>
@@ -10,7 +10,6 @@
     </div>
   </div>
 
-
   <ion-content class="has-header has-subheader">
     <ion-refresher
       pulling-text="Pull to refresh..."
@@ -20,15 +19,6 @@
       <div class="item item-divider" ng-click="toggleList('weapons')">
         Weapons<i class="icon ion-chevron-down pull-right" ng-show="showList['weapons']"></i><i class="icon ion-chevron-right pull-right" ng-hide="showList['weapons']"></i>
       </div>
-
-<!--       <div class="list">
-        <a class="item item-icon-left item-icon-right" ng-repeat="item in shop | filter: { type: 'weapon' } | orderBy: '-level'" href="#/app/store/{{item['_id']}}">
-          <i class="icon {{item.icon}}"></i>
-          {{item.name}}
-          <i class="icon ion-ios7-arrow-right"></i>
-        </a>
-      </div>
- -->
       <div class="list" ng-show="showList['weapons']">
         <a class="item item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'weapon' } | orderBy: '-level'" type="item-text-wrap" href="#/app/shop/{{item['_id']}}">
           <h2>{{item.name}}</h2>
@@ -36,19 +26,9 @@
           <i class="icon icon-gray ion-ios7-arrow-right"></i>
         </a>
       </div>
-
       <div class="item item-divider" ng-click="toggleList('armor')">
         Armor<i class="icon ion-chevron-down pull-right" ng-show="showList['armor']"></i><i class="icon ion-chevron-right pull-right" ng-hide="showList['armor']"></i>
       </div>
-
-<!--       <div class="list">
-        <a class="item item-icon-left item-icon-right" ng-repeat="item in shop | filter: { type: 'armor' } | orderBy: '-level'" href="#/app/store/{{item['_id']}}">
-          <i class="icon {{item.icon}}"></i>
-          {{item.name}}
-          <i class="icon ion-ios7-arrow-right"></i>
-        </a>
-      </div>
- -->
       <div class="list" ng-show="showList['armor']">
         <a class="item item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'armor' } | orderBy: '-level'" type="item-text-wrap" href="#/app/shop/{{item['_id']}}">
           <h2>{{item.name}}</h2>
@@ -56,19 +36,9 @@
           <i class="icon icon-gray ion-ios7-arrow-right"></i>
         </a>
       </div>
-
       <div class="item item-divider" ng-click="toggleList('accessories')">
         Accessories<i class="icon ion-chevron-down pull-right" ng-show="showList['accessories']"></i><i class="icon ion-chevron-right pull-right" ng-hide="showList['accessories']"></i>
       </div>
-
-<!--       <div class="list">
-        <a class="item item-icon-left item-icon-right" ng-repeat="item in shop | filter: { type: 'accessory' } | orderBy: '-level'" href="#/app/store/{{item['_id']}}">
-          <i class="icon {{item.icon}}"></i>
-          {{item.name}}
-          <i class="icon ion-ios7-arrow-right"></i>
-        </a>
-      </div>
- -->
       <div class="list" ng-show="showList['accessories']">
         <a class="item item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'accessory' } | orderBy: '-level'" type="item-text-wrap" href="#/app/shop/{{item['_id']}}">
           <h2>{{item.name}}</h2>
