Bug fixes and small features added
* fixed bug where if you already own a piece of equipment(not potions),
it should tell you and not let you buy it
* fixed bug where inventory doesnt update when you sell weapons
* added feature to swipe to cancel friend request
* added feature to make same type potions appear in one row with a
quantity number next to them

--- a/www/app/friends/friends.html
+++ b/www/app/friends/friends.html
@@ -48,6 +48,7 @@
         <img ng-src="{{friend.profile.avatar}}">
         <h2>{{friend.username}}</h2>
         <p>Level {{friend.attributes.level}} {{friend.character}}</p>
+        <ion-option-button class="button-assertive button-swipe" ng-click="rejectFriend($index)">Cancel Request</ion-option-button>
       </ion-item>
 
     </ion-list>
