--- a/www/app/shop/shop.html
+++ b/www/app/shop/shop.html
@@ -63,4 +63,7 @@
     </div>
 
   </ion-content>
+  <ion-footer-bar align-title="center">
+    <h1 class="title">Gold: {{ user.attributes.gold }}</h1>
+  </ion-footer-bar>
 </ion-view>
