--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -49,7 +49,7 @@
           </div>
         </div>
 
-        <div class="item row">
+        <div class="item row" ng-click="goToPotions(user.attributes.HP,calculatedData.maxHp)">
           <div class="col">
             <p>
               HP
