Bugs, Refactor, Features
* Show rarity of item in shop-detail and inventory
* Show Weapons as either 1H or 2H in shop and inventory and show Level
* fixed bug where HP shows as NaN/900
* remove deprecated mongoose-q
* Indicate items that you dont own in shop

--- a/www/app/inventory/inventory-detail.html
+++ b/www/app/inventory/inventory-detail.html
@@ -6,7 +6,7 @@
         <div class="item item-avatar item-main">
           <img src="assets/img/arrow.png">
           <h3>{{inventoryItem.name}}</h3>
-          <p>Type: {{inventoryItem.type}}</p>
+          <p>Type: {{inventoryItem.type}} | Rare: {{inventoryItem.rare}}</p>
         </div>
 
         <div class="item item-body" ng-hide="checkType()">
