--- a/www/app/shop/shop-detail.html
+++ b/www/app/shop/shop-detail.html
@@ -6,7 +6,7 @@
       <div class="item item-avatar item-main">
         <img src="assets/img/dagger.png">
         <h3>{{shopItem.name}}</h3>
-        <p>Type: {{shopItem.type}}</p>
+        <p>Type: {{shopItem.type}} | Rare: {{shopItem.rare}}</p>
       </div>
 
       <div class="item item-body" ng-hide="checkType()">
