--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -17,10 +17,16 @@
       on-refresh="refresh()">
     </ion-refresher>
 
-    <alert ng-repeat="alert in alerts" type="{{alert.type}}" ng-click="navTo('battle')" close="closeAlert($index)" ng-show="showAlert">{{alert.msg}}</alert>
+    <!--<alert ng-repeat="alert in alerts" type="{{alert.type}}" ng-click="navTo('battle')" close="closeAlert($index)" ng-show="showAlert">{{alert.msg}}</alert>
     <alert ng-repeat="alert in levelUpAlerts" type="{{alert.type}}" close="closeLevelUpAlert($index)" ng-show="showAlert">{{alert.msg}}</alert>
     <alert ng-repeat="alert in friendRequestAlerts" type="{{alert.type}}" ng-click="navTo('friends')" close="closeFriendRequestAlert($index)" ng-show="showAlert">{{alert.msg}}</alert>
     <alert ng-repeat="alert in questAlerts" type="{{alert.type}}" ng-click="navTo('quest')" close="closeQuestAlert($index)" ng-show="showAlert">{{alert.msg}}</alert>
+    <-->
+    <alert ng-repeat="alert in alerts" type="{{alert.type}}" ng-click="navTo('battle')" close="closeAlertsRefactored($index, alerts)" ng-show="showAlert">{{alert.msg}}</alert>
+    <alert ng-repeat="alert in levelUpAlerts" type="{{alert.type}}" close="closeAlertsRefactored($index, levelUpAlerts)" ng-show="showAlert">{{alert.msg}}</alert>
+    <alert ng-repeat="alert in friendRequestAlerts" type="{{alert.type}}" ng-click="navTo('friends')" close="closeAlertsRefactored($index, friendRequestAlerts)" ng-show="showAlert">{{alert.msg}}</alert>
+    <alert ng-repeat="alert in questAlerts" type="{{alert.type}}" ng-click="navTo('quest')" close="closeAlertsRefactored($index, questAlerts)" ng-show="showAlert">{{alert.msg}}</alert>
+
 
     <div class="list">
       <div class="card">
