--- a/www/app/shop/shop.html
+++ b/www/app/shop/shop.html
@@ -20,30 +20,33 @@
         Weapons<i class="icon ion-chevron-down pull-right" ng-show="showList['weapons']"></i><i class="icon ion-chevron-right pull-right" ng-hide="showList['weapons']"></i>
       </div>
       <div class="list" ng-show="showList['weapons']">
-        <a class="item item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'weapon' } | orderBy: '-level'" type="item-text-wrap" href="#/app/shop/{{item['_id']}}">
-          <h2>{{item.name}}</h2>
-          <p><span style="font-size:12px"><strong>STR:</strong> {{item.strength}} <strong>DEX:</strong> {{item.dexterity}} <strong>END:</strong> {{item.endurance}} <strong>VIT:</strong> {{item.vitality}} <strong>Cost:</strong> {{item.cost}} </span></p>
-          <i class="icon icon-gray ion-ios7-arrow-right"></i>
+        <a class="item item-icon-left item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'weapon' } | orderBy: '-level'" type="item-text-wrap" href="#/app/shop/{{item['_id']}}">
+          <i class="icon icon-gray ion-alert" ng-if="isNotOwned(item)"></i>
+          <h2 ng-class="rarityColor(item.rare)">Lvl{{item.level}} {{item.name}} {{item.size}}H</h2>
+          <p><span style="font-size:12px"><strong>STR:</strong> {{item.strength}} <strong>DEX:</strong> {{item.dexterity}} <strong>END:</strong> {{item.endurance}} <strong>VIT:</strong> {{item.vitality}} </span></p>
+          <i class="icon icon-gray ion-ios-arrow-right"></i>
         </a>
       </div>
       <div class="item item-divider" ng-click="toggleList('armor')">
         Armor<i class="icon ion-chevron-down pull-right" ng-show="showList['armor']"></i><i class="icon ion-chevron-right pull-right" ng-hide="showList['armor']"></i>
       </div>
       <div class="list" ng-show="showList['armor']">
-        <a class="item item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'armor' } | orderBy: '-level'" type="item-text-wrap" href="#/app/shop/{{item['_id']}}">
-          <h2>{{item.name}}</h2>
-          <p><span style="font-size:12px"><strong>STR:</strong> {{item.strength}} <strong>DEX:</strong> {{item.dexterity}} <strong>END:</strong> {{item.endurance}} <strong>VIT:</strong> {{item.vitality}} <strong>Cost:</strong> {{item.cost}} </span></p>
-          <i class="icon icon-gray ion-ios7-arrow-right"></i>
+        <a class="item item-icon-left item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'armor' } | orderBy: '-level'" type="item-text-wrap" href="#/app/shop/{{item['_id']}}">
+          <i class="icon icon-gray ion-alert" ng-if="isNotOwned(item)"></i>
+          <h2 ng-class="rarityColor(item.rare)">Lvl{{item.level}} {{item.name}}</h2>
+          <p><span style="font-size:12px"><strong>STR:</strong> {{item.strength}} <strong>DEX:</strong> {{item.dexterity}} <strong>END:</strong> {{item.endurance}} <strong>VIT:</strong> {{item.vitality}} </span></p>
+          <i class="icon icon-gray ion-ios-arrow-right"></i>
         </a>
       </div>
       <div class="item item-divider" ng-click="toggleList('accessories')">
         Accessories<i class="icon ion-chevron-down pull-right" ng-show="showList['accessories']"></i><i class="icon ion-chevron-right pull-right" ng-hide="showList['accessories']"></i>
       </div>
       <div class="list" ng-show="showList['accessories']">
-        <a class="item item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'accessory' } | orderBy: '-level'" type="item-text-wrap" href="#/app/shop/{{item['_id']}}">
-          <h2>{{item.name}}</h2>
-          <p><span style="font-size:12px"><strong>STR:</strong> {{item.strength}} <strong>DEX:</strong> {{item.dexterity}} <strong>END:</strong> {{item.endurance}} <strong>VIT:</strong> {{item.vitality}} <strong>Cost:</strong> {{item.cost}} </span></p>
-          <i class="icon icon-gray ion-ios7-arrow-right"></i>
+        <a class="item item-icon-left item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'accessory' } | orderBy: '-level'" type="item-text-wrap" href="#/app/shop/{{item['_id']}}">
+          <i class="icon icon-gray ion-alert" ng-if="isNotOwned(item)"></i>
+          <h2 ng-class="rarityColor(item.rare)">Lvl{{item.level}} {{item.name}}</h2>
+          <p><span style="font-size:12px"><strong>STR:</strong> {{item.strength}} <strong>DEX:</strong> {{item.dexterity}} <strong>END:</strong> {{item.endurance}} <strong>VIT:</strong> {{item.vitality}} </span></p>
+          <i class="icon icon-gray ion-ios-arrow-right"></i>
         </a>
       </div>
     </div>
@@ -57,7 +60,7 @@
         <a class="item item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'potion' }" href="#/app/shop/{{item['_id']}}">
           <h2>{{item.name}}</h2>
           <p>{{item.description}}</p>
-          <i class="icon icon-gray ion-ios7-arrow-right"></i>
+          <i class="icon icon-gray ion-ios-arrow-right"></i>
         </a>
       </div>
     </div>
