--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -25,6 +25,7 @@
     <alert ng-repeat="alert in alerts" type="{{alert.type}}" ng-click="navTo('battle')" close="closeAlertsRefactored($index, alerts)" ng-show="showAlert">{{alert.msg}}</alert>
     <alert ng-repeat="alert in levelUpAlerts" type="{{alert.type}}" close="closeAlertsRefactored($index, levelUpAlerts)" ng-show="showAlert">{{alert.msg}}</alert>
     <alert ng-repeat="alert in friendRequestAlerts" type="{{alert.type}}" ng-click="navTo('friends')" close="closeAlertsRefactored($index, friendRequestAlerts)" ng-show="showAlert">{{alert.msg}}</alert>
+    <alert ng-repeat="alert in newItemAlerts" type="{{alert.type}}" ng-click="navTo('shop')" close="closeAlertsRefactored($index, newItemAlerts)" ng-show="showAlert">{{alert.msg}}</alert>
     <alert ng-repeat="alert in questAlerts" type="{{alert.type}}" ng-click="navTo('quest')" close="closeAlertsRefactored($index, questAlerts)" ng-show="showAlert">{{alert.msg}}</alert>
 
 
