--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,8 @@
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <!-- Underscore -->
+    <script src="lib/underscore/underscore.min.js"></script>
 
     <!-- your app's js -->
     <script src="app/app.js"></script>
