last updated date
*added last updated date

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -51,5 +51,8 @@
         </ion-item>
       </ion-list>
     </ion-content>
+    <footer class="bar bar-footer bar-stable">
+      <div class="title" style="font-size:12px">Updated: {{user.HPChecker.dateLastChecked}}</div>
+    </footer>
   </ion-side-menu>
 </ion-side-menus>
