--- a/www/index.html
+++ b/www/index.html
@@ -87,6 +87,7 @@
 <script src="app/help/help-controller.js"></script>
 
 <script src="app/inventory/inventory.js"></script>
+<script src="app/inventory/inventory-service.js"></script>
 <script src="app/inventory/inventory-controller.js"></script>
 <script src="app/inventory/inventory-detail-controller.js"></script>
 
