--- a/www/app/inventory/inventory.html
+++ b/www/app/inventory/inventory.html
@@ -3,6 +3,10 @@
     <button menu-toggle="left" class="button button-icon icon-gray icon ion-navicon"></button>
   </ion-nav-buttons>
 
+  <ion-nav-buttons side="right">
+    <button class="button button-icon icon-gray icon ion-pricetags" ng-click="sellAllUnequippedPrompt()"></button>
+  </ion-nav-buttons>
+
   <div class="bar bar-subheader custom-subheader">
     <div class="button-bar bar-light">
       <a class="button button-tab" ng-class="equipmentTab" ng-click="equipment()">Equipment</a>
