--- a/www/app/inventory/inventory-detail.html
+++ b/www/app/inventory/inventory-detail.html
@@ -52,8 +52,8 @@
             <i class="icon ion-pricetag"></i> Sell
           </a>
           <a class="tab-item" ng-click="equipItem()" ng-hide="checkType()">
-            <!--<i class="icon ion-person-add"></i> Equip-->
-            <i class="icon ion-person-minus"></i> Unequip
+            <i class="icon ion-person-add"></i> Equip
+            <!--<i class="icon icon-user-minus"></i> Unequip-->
             <!--removal icon is icon-person-minus https://icomoon.io/#preview-free-->
           </a>
           <a class="tab-item" ng-click="useItem()" ng-show="checkType()">
