--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -31,11 +31,19 @@
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close href="#/app/shop">
           <i class="icon icon-gray icon-anvil"></i>
+          Crafting
+        </ion-item>
+        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/shop">
+          <i class="icon icon-gray fa fa-shopping-cart"></i>
           Shop
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close href="#/app/friends">
           <i class="icon icon-gray ion-person-stalker"></i>
           Friends
+        </ion-item>
+        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/friends">
+          <i class="icon icon-gray fa fa-fort-awesome"></i>
+          Clan
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close href="#/app/leaderboard">
           <i class="icon icon-gray icon-podium"></i>
