--- a/www/app/shop/shop-detail.html
+++ b/www/app/shop/shop-detail.html
@@ -46,10 +46,12 @@
         <p class="pull-left">
           Cost
           <br>Quantity
+          <br>In Inventory
         </p>
         <p class="pull-right">
           {{ currentCost }} Gold
           <br> {{currentQuantity }}
+          <br> {{userQuantity}}
         </p>
       </div>
 
