--- a/www/app/shop/shop.html
+++ b/www/app/shop/shop.html
@@ -67,6 +67,7 @@
 
   </ion-content>
   <ion-footer-bar align-title="center">
-    <h1 class="title">Gold: {{ user.attributes.gold }}</h1>
+    <!--<h1 class="title">Gold: {{ user.attributes.gold }}</h1>-->
+    <h1 class="title">Gold: {{ userGold }}</h1>
   </ion-footer-bar>
 </ion-view>
