--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -30,21 +30,21 @@
           Inventory
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close href="#/app/shop">
-          <i class="icon icon-gray icon-anvil"></i>
-          Crafting
-        </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/shop">
           <i class="icon icon-gray fa fa-shopping-cart"></i>
           Shop
         </ion-item>
+        <!--<ion-item class="item-icon-left" nav-clear menu-close href="#/app/shop">
+          <i class="icon icon-gray icon-anvil"></i>
+          Crafting
+        </ion-item>--> 
         <ion-item class="item-icon-left" nav-clear menu-close href="#/app/friends">
           <i class="icon icon-gray ion-person-stalker"></i>
           Friends
         </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/friends">
+        <!--<ion-item class="item-icon-left" nav-clear menu-close href="#/app/friends">
           <i class="icon icon-gray fa fa-fort-awesome"></i>
           Clan
-        </ion-item>
+        </ion-item>-->
         <ion-item class="item-icon-left" nav-clear menu-close href="#/app/leaderboard">
           <i class="icon icon-gray icon-podium"></i>
           Leaderboard
@@ -59,8 +59,8 @@
         </ion-item>
       </ion-list>
     </ion-content>
-    <footer class="bar bar-footer bar-stable">
+    <!--<footer class="bar bar-footer bar-stable">
       <div class="title" style="font-size:12px">Updated: {{user.HPChecker.dateLastChecked}}</div>
-    </footer>
+    </footer>-->
   </ion-side-menu>
 </ion-side-menus>
