--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -1,5 +1,6 @@
-<!--<ion-view title="" hide-back-button="true" ng-init="refresh()">--><!--chance change to stop refreshing alot-->
-  <ion-view title="" hide-back-button="true">
+<!--<ion-view title="" hide-back-button="true" ng-init="refresh()">-->
+<!--chance change to stop refreshing alot-->
+<ion-view title="" hide-back-button="true">
 
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon-gray icon ion-navicon"></button>
@@ -13,17 +14,20 @@
   </ion-nav-buttons>
 
   <ion-content class="has-header dashboard">
-    <ion-refresher
-      pulling-text="Pull to refresh..."
-      on-refresh="refresh()">
+    <ion-refresher pulling-text="Pull to refresh..." on-refresh="refresh()">
     </ion-refresher>
 
     <!-- new angular-bootstrap code to display alerts-->
-    <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-'+alert.type" ng-click="navTo('battle')" close="closeAlertsRefactored($index, alerts)" ng-show="showAlert">{{alert.msg}}</div>
-    <div uib-alert ng-repeat="alert in levelUpAlerts" ng-class="'alert-'+alert.type" close="closeAlertsRefactored($index, levelUpAlerts)" ng-show="showAlert">{{alert.msg}}</div>
-    <div uib-alert ng-repeat="alert in friendRequestAlerts" ng-class="'alert-'+alert.type" ng-click="navTo('friends')" close="closeAlertsRefactored($index, friendRequestAlerts)" ng-show="showAlert">{{alert.msg}}</div>
-    <div uib-alert ng-repeat="alert in newItemAlerts" ng-class="'alert-'+alert.type" ng-click="navTo('shop')" close="closeAlertsRefactored($index, newItemAlerts)" ng-show="showAlert">{{alert.msg}}</div>
-    <div uib-alert ng-repeat="alert in questAlerts" ng-class="'alert-'+alert.type" ng-click="navTo('quest')" close="closeAlertsRefactored($index, questAlerts)" ng-show="showAlert">{{alert.msg}}</div>
+    <div uib-alert ng-repeat="alert in alerts" ng-class="'alert-'+alert.type" ng-click="navTo('battle')" close="closeAlertsRefactored($index, alerts)"
+      ng-show="showAlert">{{alert.msg}}</div>
+    <div uib-alert ng-repeat="alert in levelUpAlerts" ng-class="'alert-'+alert.type" close="closeAlertsRefactored($index, levelUpAlerts)"
+      ng-show="showAlert">{{alert.msg}}</div>
+    <div uib-alert ng-repeat="alert in friendRequestAlerts" ng-class="'alert-'+alert.type" ng-click="navTo('friends')" close="closeAlertsRefactored($index, friendRequestAlerts)"
+      ng-show="showAlert">{{alert.msg}}</div>
+    <div uib-alert ng-repeat="alert in newItemAlerts" ng-class="'alert-'+alert.type" ng-click="navTo('shop')" close="closeAlertsRefactored($index, newItemAlerts)"
+      ng-show="showAlert">{{alert.msg}}</div>
+    <div uib-alert ng-repeat="alert in questAlerts" ng-class="'alert-'+alert.type" ng-click="navTo('quest')" close="closeAlertsRefactored($index, questAlerts)"
+      ng-show="showAlert">{{alert.msg}}</div>
 
     <div class="list">
       <div class="card">
@@ -56,9 +60,10 @@
           <div class="col">
             <p>
               HP
-              <span class="pull-right medium-text">{{user.attributes.HP}} / {{calculatedData.maxHp}}</span>
+              <!--<span class="pull-right medium-text">{{user.attributes.HP}} / {{calculatedData.maxHp}}</span>-->
+              <span class="pull-right medium-text">Base: {{calculatedData.vitality*vitalityMultiplier()}} | Bonus: {{user.bonusAttributes.HP}}</span>
             </p>
-            <uib-progressbar max="100" value="(user.attributes.HP*100)/calculatedData.maxHp"></uib-progressbar>
+            <uib-progressbar max="100" value="(user.attributes.HP*100)/calculatedData.maxHp"><span style="color:white; white-space:nowrap;">{{user.attributes.HP + user.bonusAttributes.HP}} / {{calculatedData.maxHp}}</span></uib-progressbar>
           </div>
         </div>
 
@@ -87,38 +92,67 @@
 
       </div>
 
-      <div class="card">
+      <div class="card" ng-click="navTo('inventory')">
         <div class="item card-title">
           What I'm Wielding
-          <span class="item-icon-right" ng-click="navTo('shop')">
+          <span class="item-icon-right">
             <i class="icon icon-anvil"></i>
           </span>
         </div>
 
         <div class="item list-heading">
-          <h1>Weapons<i class="icon ion-plus pull-right icon-btn" ng-click="navTo('inventory')"></i></h1>
+          <h1>Weapons
+          </h1>
           <div ng-show="isEquipped('weapon1')">
-            <p>{{user.equipped.weapon1.name}}<i class="pull-right ion-close icon-btn" ng-click="unequip('weapon1')"></i></p>
+            <p>{{user.equipped.weapon1.name}}
+            </p>
           </div>
           <div ng-show="isEquipped('weapon2')">
-            <p>{{user.equipped.weapon2.name}}<i class="pull-right ion-close icon-btn" ng-click="unequip('weapon2')"></i></p>
+            <p>{{user.equipped.weapon2.name}}
+            </p>
           </div>
         </div>
 
         <div class="item list-heading">
-          <h1>Armor<i class="icon ion-plus pull-right icon-btn" ng-click="navTo('inventory')"></i></h1>
+          <h1>Armor
+          </h1>
           <div ng-show="isEquipped('armor')">
-            <p>{{user.equipped.armor.name}}<i class="pull-right ion-close icon-btn" ng-click="unequip('armor')"></i></p>
+            <p>{{user.equipped.armor.name}}
+            </p>
           </div>
         </div>
 
         <div class="item list-heading">
-          <h1>Accessories<i class="icon ion-plus pull-right icon-btn" ng-click="navTo('inventory')"></i></h1>
+          <h1>Accessories
+          </h1>
           <div ng-show="isEquipped('accessory1')">
-            <p>{{user.equipped.accessory1.name}}<i class="pull-right ion-close icon-btn" ng-click="unequip('accessory1')"></i></p>
+            <p>{{user.equipped.accessory1.name}}
+            </p>
           </div>
           <div ng-show="isEquipped('accessory2')">
-            <p>{{user.equipped.accessory2.name}}<i class="pull-right ion-close icon-btn" ng-click="unequip('accessory2')"></i></p>
+            <p>{{user.equipped.accessory2.name}}
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="card" ng-click="navTo('quest')">
+        <div class="item card-title">
+          Active Quests
+          <span class="item-icon-right">
+            <i class="icon icon-ion-map"></i>
+          </span>
+        </div>
+        <div class="list">
+          <div class="item row" ng-repeat="quest in user.quests | filter : {status: 'active'}">
+              <div class="col">
+              <p>
+                {{quest.shortDesc}}
+                <span class="pull-right medium-text">{{quest.winGoal}} / {{quest.winGoal}} {{quest.getObj.activity}}</span>
+              </p>
+              <uib-progressbar max="100" value="(quest.winGoal*100)/quest.winGoal"></uib-progressbar>
+              </div>
           </div>
         </div>
 
