--- a/www/app/shop/shop.html
+++ b/www/app/shop/shop.html
@@ -21,9 +21,10 @@
       </div>
       <div class="list" ng-show="showList['weapons']">
         <a class="item item-icon-left item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'weapon' } | orderBy: '-level'" type="item-text-wrap" href="#/app/shop/{{item['_id']}}">
-          <i class="icon icon-gray ion-alert" ng-if="isNotOwned(item)"></i>
+          <i class="icon icon-gray ion-alert" ng-if="isNotSeen(item)"></i>
           <h2 ng-class="rarityColor(item.rare)">Lvl{{item.level}} {{item.name}} {{item.size}}H</h2>
-          <p><span style="font-size:12px"><strong>STR:</strong> {{item.strength}} <strong>DEX:</strong> {{item.dexterity}} <strong>END:</strong> {{item.endurance}} <strong>VIT:</strong> {{item.vitality}} </span></p>
+          <p><span style="font-size:12px"><strong>STR:</strong> {{item.strength}} <strong>DEX:</strong> {{item.dexterity}} <strong>END:</strong> {{item.endurance}} <strong>VIT:</strong> {{item.vitality}} </span>
+          <span ng-if="isOwned(item)" class="item-note">Owned</span></p>
           <i class="icon icon-gray ion-ios-arrow-right"></i>
         </a>
       </div>
@@ -32,9 +33,10 @@
       </div>
       <div class="list" ng-show="showList['armor']">
         <a class="item item-icon-left item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'armor' } | orderBy: '-level'" type="item-text-wrap" href="#/app/shop/{{item['_id']}}">
-          <i class="icon icon-gray ion-alert" ng-if="isNotOwned(item)"></i>
+          <i class="icon icon-gray ion-alert" ng-if="isNotSeen(item)"></i>
           <h2 ng-class="rarityColor(item.rare)">Lvl{{item.level}} {{item.name}}</h2>
-          <p><span style="font-size:12px"><strong>STR:</strong> {{item.strength}} <strong>DEX:</strong> {{item.dexterity}} <strong>END:</strong> {{item.endurance}} <strong>VIT:</strong> {{item.vitality}} </span></p>
+          <p><span style="font-size:12px"><strong>STR:</strong> {{item.strength}} <strong>DEX:</strong> {{item.dexterity}} <strong>END:</strong> {{item.endurance}} <strong>VIT:</strong> {{item.vitality}} </span>
+          <span ng-if="isOwned(item)" class="item-note">Owned</span></p>
           <i class="icon icon-gray ion-ios-arrow-right"></i>
         </a>
       </div>
@@ -43,9 +45,10 @@
       </div>
       <div class="list" ng-show="showList['accessories']">
         <a class="item item-icon-left item-icon-right item-padding" ng-repeat="item in shop | filter: { type: 'accessory' } | orderBy: '-level'" type="item-text-wrap" href="#/app/shop/{{item['_id']}}">
-          <i class="icon icon-gray ion-alert" ng-if="isNotOwned(item)"></i>
+          <i class="icon icon-gray ion-alert" ng-if="isNotSeen(item)"></i>
           <h2 ng-class="rarityColor(item.rare)">Lvl{{item.level}} {{item.name}}</h2>
-          <p><span style="font-size:12px"><strong>STR:</strong> {{item.strength}} <strong>DEX:</strong> {{item.dexterity}} <strong>END:</strong> {{item.endurance}} <strong>VIT:</strong> {{item.vitality}} </span></p>
+          <p><span style="font-size:12px"><strong>STR:</strong> {{item.strength}} <strong>DEX:</strong> {{item.dexterity}} <strong>END:</strong> {{item.endurance}} <strong>VIT:</strong> {{item.vitality}} </span>
+          <span ng-if="isOwned(item)" class="item-note">Owned</span></p>
           <i class="icon icon-gray ion-ios-arrow-right"></i>
         </a>
       </div>
@@ -67,7 +70,6 @@
 
   </ion-content>
   <ion-footer-bar align-title="center">
-    <!--<h1 class="title">Gold: {{ user.attributes.gold }}</h1>-->
     <h1 class="title">Gold: {{ userGold }}</h1>
   </ion-footer-bar>
 </ion-view>
