--- a/www/app/inventory/inventory-detail.html
+++ b/www/app/inventory/inventory-detail.html
@@ -6,7 +6,7 @@
         <div class="item item-avatar item-main">
           <img src="assets/img/arrow.png">
           <h3>{{inventoryItem.name}}</h3>
-          <p>Type: {{inventoryItem.type}} | Rare: {{inventoryItem.rare}}</p>
+          <p>Type: {{inventoryItem.type}} | Level: {{inventoryItem.level}} | Rare: {{inventoryItem.rare}}</p>
           <P>Equipped: {{inventoryItem.equipped}}
         </div>
 
