--- a/www/app/main/main.html
+++ b/www/app/main/main.html
@@ -94,7 +94,7 @@
 
       <div class="card" ng-click="navTo('inventory')">
         <div class="item card-title">
-          What I'm Wielding
+          Equipped Items
           <span class="item-icon-right">
             <i class="icon icon-anvil"></i>
           </span>
